Ajuste de  metodos y correccion de  errores  escenarios Fase 1